--- a/Arena_TierList/Views/Shared/_Layout.cshtml
+++ b/Arena_TierList/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewData["Title"] - Arena_TierList</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+
     <style>
      
         .link{
@@ -62,6 +63,12 @@
             padding-right:0px;
             display:flex;
        }
+       .hero1{
+           background-color:lightgray;
+       }
+       .hero3{
+           background-color:mediumseagreen;
+       }
 
     </style>
 </head>
@@ -101,6 +108,7 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/scripts/jquery.unobtrusive-ajax.js"></script>
     @RenderSection("Scripts", required: false)
 </body>
 </html>
